--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.html
@@ -1,63 +1,61 @@
 <div class="body">
   <div class="nine">
-    <h1>{{ titleUnit }}<span>סה"כ תוצאות:{{ totalResults }}</span></h1>
+    <h1>{{ titleUnit }}<span>סה\"כ תוצאות:{{ totalResults }}</span></h1>
   </div>
 
   <!-- Left Card -->
-   <!-- Left Card -->
-   <div class="left-container">
+  <div class="left-container">
     <form [formGroup]="detailsForm" dir="rtl" class="details-form">
       <mat-form-field>
         <mat-label>שם פרטי</mat-label>
         <input matInput formControlName="FirstName">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>שם משפחה</mat-label>
         <input matInput formControlName="LastName">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>גיל</mat-label>
         <input matInput formControlName="Age">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>מין</mat-label>
         <input matInput formControlName="GenderText">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>טלפון</mat-label>
         <input matInput formControlName="Phone">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>טלפון נייד</mat-label>
         <input matInput formControlName="PhoneCell">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>עיר</mat-label>
         <input matInput formControlName="City">
       </mat-form-field>
-    
+
       <mat-form-field>
         <mat-label>רחוב</mat-label>
         <input matInput formControlName="Street">
       </mat-form-field>
-    
+
       <mat-form-field *ngIf="detailsForm.get('Apartment')?.value">
         <mat-label>דירה</mat-label>
         <input matInput formControlName="Apartment">
       </mat-form-field>
-    
+
       <mat-form-field *ngIf="detailsForm.get('HouseNo')?.value">
         <mat-label>מספר בית</mat-label>
         <input matInput formControlName="HouseNo">
       </mat-form-field>
     </form>
-    
   </div>
 
   <!-- Filter Form with Border -->
@@ -107,59 +105,71 @@
   </div>
 
   <!-- Tab Group -->
-  <mat-tab-group (selectedIndexChange)="onTabChange($event) " dir="rtl">
+  <mat-tab-group (selectedIndexChange)="onTabChange($event)" dir="rtl">
     <!-- Tab 1: Main Table View -->
     <mat-tab label="תצוגת נתונים">
-      <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
-        <!-- Medical Record Column -->
-        <ng-container matColumnDef="MedicalRecord">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> Medical Record </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.MedicalRecord }} </mat-cell>
-        </ng-container>
-      
-        <!-- Entry Date Column -->
-        <ng-container matColumnDef="EntryDate">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.EntryDate | date: 'dd/MM/yyyy' }} </mat-cell>
-        </ng-container>
-      
-        <!-- Entry User Name Column -->
-        <ng-container matColumnDef="EntryUserName">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> שם משתמש </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.EntryUserName }} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="Heading">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> שם רכיב </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.Heading }} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="UnitName">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> מחלקה</mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.UnitName }} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="Source">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> מקור</mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.Source }} </mat-cell>
-        </ng-container>
-      
-      
-        <!-- Header Row -->
-        <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-        <!-- Data Rows -->
-        <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
-      </mat-table>
-      
+      <div *ngIf="loadingMainTab" class="loading-container">
+        <mat-spinner></mat-spinner>
+      </div>
+      <div *ngIf="!loadingMainTab">
+        <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
+          <!-- Medical Record Column -->
+          <ng-container matColumnDef="MedicalRecord">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Medical Record </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.MedicalRecord }} </mat-cell>
+          </ng-container>
 
-      <!-- Paginator -->
-      <mat-paginator
-        [length]="matTableDataSource.paginator?.length || 0"
-        [pageSize]="15"
-        [pageSizeOptions]="[15, 50, 100]">
-      </mat-paginator>
+          <!-- Entry Date Column -->
+          <ng-container matColumnDef="EntryDate">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.EntryDate | date: 'dd/MM/yyyy' }} </mat-cell>
+          </ng-container>
+
+          <!-- Entry User Name Column -->
+          <ng-container matColumnDef="EntryUserName">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> שם משתמש </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.EntryUserName }} </mat-cell>
+          </ng-container>
+
+          <!-- Heading Column -->
+          <ng-container matColumnDef="Heading">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> שם רכיב </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.Heading }} </mat-cell>
+          </ng-container>
+
+          <!-- Unit Name Column -->
+          <ng-container matColumnDef="UnitName">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> מחלקה</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.UnitName }} </mat-cell>
+          </ng-container>
+
+          <!-- Source Column -->
+          <ng-container matColumnDef="Source">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> מקור</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.Source }} </mat-cell>
+          </ng-container>
+
+          <!-- Header Row -->
+          <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+          <!-- Data Rows -->
+          <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+        </mat-table>
+
+        <!-- Paginator -->
+        <mat-paginator
+          [length]="matTableDataSource.paginator?.length || 0"
+          [pageSize]="15"
+          [pageSizeOptions]="[15, 50, 100]">
+        </mat-paginator>
+      </div>
     </mat-tab>
 
     <!-- Tab 2: Timeline View -->
     <mat-tab label="ציר זמן">
-      <div class="timeline-container">
+      <div *ngIf="loadingTimelineTab" class="loading-container">
+        <mat-spinner></mat-spinner>
+      </div>
+      <div class="timeline-container" *ngIf="!loadingTimelineTab">
         <h1>{{ titleUnit }}</h1>
         <div *ngIf="timelineEvents.length > 0" class="timeline">
           <div *ngFor="let event of timelineEvents; let i = index" class="timeline-item">
@@ -178,41 +188,44 @@
         <p *ngIf="timelineEvents.length === 0">No timeline events available.</p>
       </div>
     </mat-tab>
-      <!-- Tab 3: Employees -->
-  <mat-tab label="עובדים">
-    
-      <mat-table [dataSource]="employeeDataSource" matSort dir="rtl" class="mat-elevation-z8">
-         <!-- FullName Column -->
-         <ng-container matColumnDef="FullName">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> שם העובד  </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.FullName }} </mat-cell>
-        </ng-container>
-        <!-- Employee ID Column -->
-        <ng-container matColumnDef="EmployeeID">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> מזהה עובד </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.EmployeeID }} </mat-cell>
-        </ng-container>
 
-        <!-- Department Description Column -->
-        <ng-container matColumnDef="DepartnentDescripton">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> תיאור מחלקה </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.DepartnentDescripton }} </mat-cell>
-        </ng-container>
+    <!-- Tab 3: Employees -->
+    <mat-tab label="עובדים">
+      <div *ngIf="loadingEmployeeTab" class="loading-container">
+        <mat-spinner></mat-spinner>
+      </div>
+      <div *ngIf="!loadingEmployeeTab">
+        <mat-table [dataSource]="employeeDataSource" matSort dir="rtl" class="mat-elevation-z8">
+          <!-- Full Name Column -->
+          <ng-container matColumnDef="FullName">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> שם העובד </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.FullName }} </mat-cell>
+          </ng-container>
 
-        <!-- Cell Number Column -->
-        <ng-container matColumnDef="CellNumber">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> מספר טלפון </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element.CellNumber }} </mat-cell>
-        </ng-container>
-        
+          <!-- Employee ID Column -->
+          <ng-container matColumnDef="EmployeeID">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> מזהה עובד </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.EmployeeID }} </mat-cell>
+          </ng-container>
 
-        <!-- Header Row -->
-        <mat-header-row *matHeaderRowDef="employeeColumns"></mat-header-row>
-        <!-- Data Rows -->
-        <mat-row *matRowDef="let row; columns: employeeColumns"></mat-row>
-      </mat-table>
-    
-  </mat-tab>
-</mat-tab-group>
-  
+          <!-- Department Description Column -->
+          <ng-container matColumnDef="DepartnentDescripton">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> תיאור מחלקה </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.DepartnentDescripton }} </mat-cell>
+          </ng-container>
+
+          <!-- Cell Number Column -->
+          <ng-container matColumnDef="CellNumber">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> מספר טלפון </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.CellNumber }} </mat-cell>
+          </ng-container>
+
+          <!-- Header Row -->
+          <mat-header-row *matHeaderRowDef="employeeColumns"></mat-header-row>
+          <!-- Data Rows -->
+          <mat-row *matRowDef="let row; columns: employeeColumns"></mat-row>
+        </mat-table>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </div>
