--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
@@ -322,3 +322,10 @@
     }
   }
 
+  .loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Adjust height as needed */
+  }
+  
