--- a/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
+++ b/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
@@ -52,5 +52,7 @@
     <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
   </mat-table>
 
-  <mat-paginator [length]="matTableDataSource.paginator?.length || 0" [pageIndex]="matTableDataSource.paginator?.pageIndex" [pageSize]="matTableDataSource.paginator?.pageSize" [pageSizeOptions]="[15, 50, 100]"></mat-paginator>
+  <mat-paginator [length]="matTableDataSource.paginator?.length || 0" [pageIndex]="matTableDataSource.paginator?.pageIndex" 
+  [pageSize]="matTableDataSource.paginator?.pageSize"
+   [pageSizeOptions]="[15, 50, 100]"></mat-paginator>
 </div>
