--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -74,7 +74,9 @@
             <div class="gauge-info"> סה"כ מטופלים : <strong>{{ TotalHosLabResultover180 }}</strong></div>
         </div>
         </mat-card>
-  
+                <!-- ייעוצים -->
+
+       
        
       </div>
     </div>
@@ -83,7 +85,7 @@
     <div class="mat-table-container"dir="rtl"  style="overflow-x: hidden; overflow-y: hidden; display: inline-grid;">
         <mat-tab-group>
         <!-- First Tab -->
-        <mat-tab label="בדיקות מעבדה">
+        <mat-tab class="tabtitle" label="בדיקות מעבדה">
           <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8" matSort style="table-layout: fixed; width: 100%;">
             <ng-container matColumnDef="Admission_No">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Admission No</th>
@@ -118,8 +120,7 @@
   
         <!-- Second Tab -->
         <mat-tab label="מקבל אינסולין">
-          
-            <table mat-table [dataSource]="dataSource3" class="mat-elevation-z8" matSort style="table-layout: fixed; width: 100%;">
+            <table mat-table [dataSource]="dataSource3" matSort #sort3  class="mat-elevation-z8"  style="table-layout: fixed; width: 100%;">
               <ng-container matColumnDef="Hospitalization_Patient">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient</th>
                 <td mat-cell *matCellDef="let element">{{ element.Hospitalization_Patient }}</td>
@@ -160,14 +161,14 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns3"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns3"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            <mat-paginator #paginator3 [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
           </mat-tab>
           
           <mat-tab label="Diagnosis Data">
             <h3>Diagnosis Data</h3>
-            <table mat-table [dataSource]="dataSource4" class="mat-elevation-z8" matSort style="table-layout: fixed; width: 100%;">
+            <table mat-table [dataSource]="dataSource4" class="mat-elevation-z8" matSort #sort4 style="table-layout: fixed; width: 100%;">
               <ng-container matColumnDef="Hospitalization_Patient">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Hospitalization_Patient</th>
                 <td mat-cell *matCellDef="let element">{{ element.Hospitalization_Patient }}</td>
               </ng-container>
               <ng-container matColumnDef="Admission_No">
@@ -206,8 +207,8 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns4"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns4"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-          </mat-tab>
+            <mat-paginator #paginator4 [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </mat-tab>
           
           <mat-tab label="Hemoglobin A1C Results">
             <table mat-table [dataSource]="dataSourceHemoglobin" class="mat-elevation-z8" matSort>
@@ -247,7 +248,61 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsHemoglobin"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumnsHemoglobin"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            <mat-paginator #paginatorHemoglobin [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </mat-tab>
+        <mat-tab label="ייעוצים">
+            <table mat-table [dataSource]="dataSourceAllConsiliums" matSort>
+              <ng-container matColumnDef="Id_Num">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+                <td mat-cell *matCellDef="let element">{{ element.Id_Num }}</td>
+              </ng-container>
+            
+              <ng-container matColumnDef="First_Name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
+                <td mat-cell *matCellDef="let element">{{ element.First_Name }}</td>
+              </ng-container>
+            
+              <ng-container matColumnDef="Last_Name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
+                <td mat-cell *matCellDef="let element">{{ element.Last_Name }}</td>
+              </ng-container>
+            
+              <ng-container matColumnDef="UnitName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
+                <td mat-cell *matCellDef="let element">{{ element.UnitName }}</td>
+              </ng-container>
+            
+              <ng-container matColumnDef="Entry_Date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Entry Date</th>
+                <td mat-cell *matCellDef="let element">{{ element.Entry_Date | date }}</td>
+              </ng-container>
+              <ng-container matColumnDef="Question">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Question</th>
+                <td mat-cell *matCellDef="let element">{{ element.Question }}</td>
+              </ng-container>
+              <ng-container matColumnDef="Diagnosis_Text">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis_Text</th>
+                <td mat-cell *matCellDef="let element">{{ element.Diagnosis_Text }}</td>
+              </ng-container>
+              <ng-container matColumnDef="Consulted_Unit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Consulted_Unit</th>
+                <td mat-cell *matCellDef="let element">{{ element.Consulted_Unit }}</td>
+              </ng-container>
+              <ng-container matColumnDef="Answer_Text">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Answer_Text</th>
+                <td mat-cell *matCellDef="let element">{{ element.Answer_Text }}</td>
+              </ng-container>
+              <ng-container matColumnDef="Answer_Date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Answer_Date</th>
+                <td mat-cell *matCellDef="let element">{{ element.Answer_Date | date }}</td>
+              </ng-container>
+              <!-- Add other columns similarly -->
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsAllConsiliums"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsAllConsiliums"></tr>
+            </table>
+            
+            <mat-paginator #paginatorAllConsiliums [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </mat-tab>
         
       </mat-tab-group>
